--- a/plugin.yml
+++ b/plugin.yml
@@ -9,8 +9,15 @@ commands:
     description: "Manages ExplosiveSnowballs plugin"
     usage: "/snowballs <args>"
     permission: snowballs.command
+  givesnowball:
+    description: "Gives user a explosive snowball"
+    usage: "/givesnowball <player> <name>"
+    permission: snowballs.give
 
 permission:
   snowballs.command:
     default: op
     description: "Permission for ExplosiveSnowballs plugin"
+  snowballs.give:
+    default: op
+    description: "Permission for give command"
