--- a/plugin.yml
+++ b/plugin.yml
@@ -14,7 +14,7 @@ commands:
     description: "Gives user a explosive snowball"
     usage: "/givesnowball <player> <name>"
     permission: snowballs.give
-    aliases: [gs]
+    aliases: [gsb]
 
 permission:
   snowballs.command:
